@@ -6,9 +6,9 @@
 %version.ent;
 %entities.ent;
 
-<!ENTITY revj2000 "3295">
+<!ENTITY revj2000 "3316">
 <!ENTITY month "January 2009">
-<!ENTITY date "January 08, 2009">
+<!ENTITY date "January 29, 2009">
 
 <!ENTITY rev "&MIKTEX_SERIES_STR;.&revj2000;">
 
